# file-clerk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  LICENSE.rst  README.rst  automate.py  index.html  mkdocs.yml  mkgendocs.yml  objects.inv  pyproject.toml  requirements.txt  summary.md
.github/workflows/: docs_pages.yaml  gh-pages.yml  pre-release.yml  release.yml
docs/: .pages  docstring_template.md  explanation.md  index.md  mkgendocs.yml  reference.md  summary.md  tutorials.md
docs/scripts/clerk/: clerk.md
docs/source/: conf.py  examples.rst  file_clerk.rst  index.rst  readme.rst
docs/sources/api/: index.md
docs/templates/: .pages  index.md  summary.md
docs/templates/start/: install.md  tutorial.md
explanation/: index.html
file_clerk/: __init__.py  clerk.py  file_clerk.py
reference/: index.html
tests/: __init__.py  test_file_clerk.py
tutorials/: index.html
